Ajout d'une description et d'un titre

--- a/api/config/packages/api_platform.yaml
+++ b/api/config/packages/api_platform.yaml
@@ -1,4 +1,7 @@
 api_platform:
+    title: 'Symfony API Platform REST API'
+    description: 'A Symfony API to manage a database'
+    show_webby: false
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
     patch_formats:
