--- a/api/composer.json
+++ b/api/composer.json
@@ -32,6 +32,7 @@
         "symfony/yaml": "6.0.*"
     },
     "config": {
+        "process-timeout": 0,
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
             "symfony/flex": true,
