Ajout du script permettant de démarrer le serveur

--- a/api/composer.json
+++ b/api/composer.json
@@ -63,6 +63,7 @@
         "symfony/polyfill-php80": "*"
     },
     "scripts": {
+        "start": "php -S 127.0.0.1:8000 -t public",
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
